--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,6 @@
 {
   "mysql_host": "localhost",
-  "mysql_port": 3306,
+  "mysql_port": "3306",
   "mysql_db": "db",
   "mysql_user": "admin",
   "mysql_password": "password",
