--- a/config.example.json
+++ b/config.example.json
@@ -10,6 +10,5 @@
   "aws_key": "*****",
   "aws_secret": "*****",
 
-  "dumps_to_keep": 10,
-  "dump_name_format": "2006-01-02"
+  "dumps_to_keep": 10
 }
