--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,8 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version
       - image: circleci/golang:1.12
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
     working_directory: /go/src/github.com/NikolayOskin/sql-dumper
     steps:
       - checkout
@@ -27,9 +17,15 @@ jobs:
       #- run: go get -v -t -d ./...
       - run: go test -v
   test:
-    pre:
-      - go get github.com/mattn/goveralls
-    override:
-      - go test -v -cover -race -coverprofile=/home/ubuntu/coverage.out
-    post:
-      - /home/ubuntu/.go_workspace/bin/goveralls -coverprofile=/home/ubuntu/coverage.out -service=circle-ci -repotoken=$COVERALLS_TOKEN
+    docker:
+      - image: circleci/golang:1.12
+
+    working_directory: /go/src/github.com/NikolayOskin/sql-dumper
+    steps:
+      - checkout
+
+      - run: go get gopkg.in/amz.v3/aws
+      - run: go get gopkg.in/amz.v3/s3
+      - run: go get github.com/mattn/goveralls
+      - run: go test -v -cover -race -coverprofile=/home/ubuntu/coverage.out
+      - run: /home/ubuntu/.go_workspace/bin/goveralls -coverprofile=/home/ubuntu/coverage.out -service=circle-ci -repotoken=$COVERALLS_TOKEN
